# samplerID

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  id.cpp  id.h  index_set.h  main.cpp  tt.cpp  tt.h  tt_ci.cpp  tt_ci.h
.github/workflows/: cmake-single-platform.yml
include/sampler_id/: block_tt_id.h  grid.h  interp_decomp.h  lapack_wrapper.h  q_tt_id.h  tensor_tree.h  tree.h  tree_tt_id.h  tt.h  tt_id.h
src/: interp_decomp.cpp  lapack_wrapper.cpp  main.cpp  tt.cpp
tests/: test_block_tt_id.cpp  test_id.cpp  test_interp_decomp.cpp  test_q_tt_id.cpp  test_tree_tt_id.cpp  test_tt.cpp  test_tt_ci.cpp  test_tt_id.cpp
